Added bulma and tried nav with bulma rules

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica CEVI</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
     
 </head>
 
 <body>
+
     <button id="cambiarFuente" class="font-control">A+</button>
-    <nav>
+
+    <!-- <nav>
         <ul>
             <img src="logo.png" alt="Descripción de la imagen"
                 style="float: left; margin-left: 10px; width: 50px;margin-top: -7px;">
@@ -27,7 +30,37 @@
             <li><a href="#quienessomos">Quiénes Somos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
+    </nav> -->
+
+
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <p class="navbar-item has-text-weight-bold is-size-4 has-text-white" href="">
+                <img class="mr-1" src="logo.png" width="41" height="28">
+                CEVI
+            </p>
+            <a role="button" class="navbar-burger has-text-white" aria-label="menu" aria-expanded="false"
+                data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+            </div>
+            <div class="navbar-end">
+                <a class="navbar-item has-text-white" href="#inicio">Inicio</a>
+                <a class="navbar-item has-text-white" href="#servicios">Servicios</a>
+                <a class="navbar-item has-text-white" href="#optica">Óptica</a>
+                <a class="navbar-item has-text-white" href="#quienessomos">Quiénes Somos</a>
+                <a class="navbar-item has-text-white" href="#contacto">Contacto</a>
+            </div>
+        </div>
     </nav>
+
+
+
     <div class="container">
         <div class="inicio pestaña">
             <h2><p>CEVI</p> 
@@ -286,128 +319,18 @@
         </div>
     </div>
     </footer>
-    <script>
-        const enlaces = document.querySelectorAll("nav ul li a");
-        const pestañas = document.querySelectorAll(".pestaña");
-        const btnAgendarCita = document.querySelector(".btn-agendar-cita");
-        const consultas = document.querySelectorAll(".consultas");
-        const opciones = document.querySelectorAll(".opciones");
-        const estadoConsultas = document.querySelectorAll(".estado-consultas span");
 
-        document.addEventListener("DOMContentLoaded", function () {
-    // Encuentra el botón por su ID
-    const cambiaFuente = document.getElementById("cambiarFuente");
-
-    // Obtén el tamaño de fuente actual
-    const body = document.body;
-    const estilosBody = window.getComputedStyle(body);
-    const tamañoFuenteActual = parseInt(estilosBody.getPropertyValue("font-size"));
-
-    // Define el incremento deseado
-    const incremento = 4; // Puedes ajustar este valor según tus preferencias
-
-    // Función para aumentar o reducir la fuente
-    cambiaFuente.addEventListener("click", function () {
-        const tamañoFuente = parseInt(estilosBody.getPropertyValue("font-size"));
-        body.style.fontSize = tamañoFuente === tamañoFuenteActual ? tamañoFuente + incremento + "px" : tamañoFuenteActual + "px";
-    });
-});
-        // Función para ocultar todos los cuadros de opciones
-        function ocultarOpciones() {
-            opciones.forEach((opcion) => {
-                opcion.style.display = "none";
-            });
-
-            estadoConsultas.forEach((estado) => {
-                estado.textContent = "▼"; // Restablecer todos los estados a cerrados
-            });
-        }
-
-        // Función para mostrar una pestaña específica
-        function mostrarPestana(pestana) {
-            pestañas.forEach((pestaña) => {
-                pestaña.style.display = "none";
-            });
-            document.querySelector(`.${pestana}.pestaña`).style.display = "block";
-        }
-        function resaltarPestanaActiva(pestana) {
-            enlaces.forEach((enlace) => {
-                enlace.classList.remove("activo");
-            });
-
-            pestañas.forEach((p) => {
-                p.style.display = "none";
-            });
-
-            pestana.style.display = "block";
-            enlaces[Array.from(pestañas).indexOf(pestana)].classList.add("activo");
-        }
-        // Agrega eventos a los enlaces de navegación
-        enlaces.forEach((enlace) => {
-            enlace.addEventListener("click", (event) => {
-                event.preventDefault();
-                const href = enlace.getAttribute("href").substr(1);
-                const pestana = document.querySelector(`.${href}.pestaña`);
-                resaltarPestanaActiva(pestana);
-                ocultarOpciones();
-            });
-        });
-        // Agrega evento para el botón "Agendar Cita"
-        btnAgendarCita.addEventListener("click", () => {
-            const pestana = document.querySelector(".contacto.pestaña");
-            resaltarPestanaActiva(pestana);
-            ocultarOpciones();
-        });
-
-        // Agrega eventos a los cuadros de "Consultas"
-        consultas.forEach((consulta, index) => {
-            consulta.addEventListener("click", () => {
-                if (opciones[index].style.display === "none" || !opciones[index].style.display) {
-                    ocultarOpciones(); // Cierra todas las opciones antes de abrir una nueva
-                    opciones[index].style.display = "block";
-                    estadoConsultas[index].textContent = "▲";
-                } else {
-                    opciones[index].style.display = "none";
-                    estadoConsultas[index].textContent = "▼";
-                }
-            });
-        });
-
-        // Mostrar la pestaña de inicio al cargar la página
-        window.addEventListener("load", () => {
-            const pestanaInicio = document.querySelector(".inicio.pestaña");
-            resaltarPestanaActiva(pestanaInicio);
-        });
-
-        // JavaScript para mostrar texto oculto al hacer clic en una imagen de doctor
-        const imagenesInfo = document.querySelectorAll(".imagen-info");
-        imagenesInfo.forEach((imagenInfo) => {
-            const info = imagenInfo.querySelector(".info");
-            imagenInfo.addEventListener("mouseover", () => {
-                info.style.display = "block"; // Mostrar el texto al pasar el mouse por encima
-            });
-            imagenInfo.addEventListener("mouseout", () => {
-                info.style.display = "none"; // Ocultar el texto al quitar el mouse
-            });
-        });
-        document.addEventListener("DOMContentLoaded", function () {
-            const mostrarEspecialistas = document.getElementById("mostrar-especialistas");
-            const imagenesInicio = document.querySelector(".imagenes-inicio");
-            const flechaEspecialistas = document.getElementById("flecha-especialistas");
-
-            mostrarEspecialistas.addEventListener("click", function () {
-                // Alternar la clase "mostrando" en el div de imágenes
-                imagenesInicio.classList.toggle("mostrando");
-                if (imagenesInicio.classList.contains("mostrando")) {
-                    flechaEspecialistas.textContent = "▲"; // Cambiar a flecha hacia arriba
-                } else {
-                    flechaEspecialistas.textContent = "▼"; // Cambiar a flecha hacia abajo
-                }
-            });
-        });
-
-    </script>
-
+    <!-- <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+        </div>
+      </footer> -->
+      
+    <script src="app.js" defer></script>
 </body>
 
 </html>
